mn-synt-arbeidsforhold-service/Byttet til bruk av synthdata-amelding gcp (#2026)
byttet til bruk av synthdata-amelding gcp