@@ -3,39 +3,50 @@ package no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.config.credentials.SyntAmeldingProperties;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer.command.GenerateArbeidsforholdHistorikkCommand;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer.command.GenerateStartArbeidsforholdCommand;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.domain.Arbeidsforhold;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.exception.SyntetiseringException;
+import no.nav.testnav.libs.dto.syntrest.v1.ArbeidsforholdResponse;
+import no.nav.testnav.libs.securitycore.domain.ServerProperties;
+import no.nav.testnav.libs.servletsecurity.exchange.TokenExchange;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.json.Jackson2JsonDecoder;
 import org.springframework.http.codec.json.Jackson2JsonEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.function.client.ExchangeStrategies;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import no.nav.testnav.libs.dto.syntrest.v1.ArbeidsforholdResponse;
-import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer.command.GenerateArbeidsforholdHistorikkCommand;
-import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer.command.GenerateStartArbeidsforholdCommand;
-import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.domain.Arbeidsforhold;
-import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.exception.SyntetiseringException;
 
 @Slf4j
 @Component
-public class SyntrestConsumer {
+public class SyntAmeldingConsumer {
+
     private final WebClient webClient;
+    private final ServerProperties properties;
+    private final TokenExchange tokenExchange;
     private final ObjectMapper objectMapper;
 
     private static final String OPPRETTELSE_FEILMELDING = "Feil med opprettelse av arbeidsforhold: ";
 
-    public SyntrestConsumer(
-            @Value("${consumers.syntrest.url}") String url,
+    public SyntAmeldingConsumer(
+            TokenExchange tokenExchange,
+            SyntAmeldingProperties properties,
             ObjectMapper objectMapper
     ) {
         this.objectMapper = objectMapper;
-        this.webClient = WebClient
-                .builder()
+        this.tokenExchange = tokenExchange;
+        this.properties = properties;
+        this.webClient = WebClient.builder()
+                .exchangeStrategies(ExchangeStrategies.builder()
+                        .codecs(configurer -> configurer
+                                .defaultCodecs()
+                                .maxInMemorySize(16 * 1024 * 1024))
+                        .build())
                 .codecs(clientDefaultCodecsConfigurer -> {
                     clientDefaultCodecsConfigurer
                             .defaultCodecs()
@@ -44,7 +55,7 @@ public class SyntrestConsumer {
                             .defaultCodecs()
                             .jackson2JsonDecoder(new Jackson2JsonDecoder(objectMapper, MediaType.APPLICATION_JSON));
                 })
-                .baseUrl(url)
+                .baseUrl(properties.getUrl())
                 .build();
     }
 
@@ -52,25 +63,30 @@ public class SyntrestConsumer {
     private List<ArbeidsforholdResponse> getArbeidsforholdHistorikkResponse(Arbeidsforhold arbeidsforhold, LocalDate kalendermaaned, Integer count) {
         var dto = arbeidsforhold.toSyntrestDTO(kalendermaaned, count);
         try {
-            return new GenerateArbeidsforholdHistorikkCommand(webClient, dto).call();
+            var accessToken = tokenExchange.exchange(properties).block();
+            return new GenerateArbeidsforholdHistorikkCommand(webClient, dto, accessToken.getTokenValue()).call();
         } catch (WebClientResponseException.InternalServerError e) {
             throw new SyntetiseringException(OPPRETTELSE_FEILMELDING + objectMapper.writeValueAsString(dto), e);
         }
     }
 
-    public List<Arbeidsforhold> getArbeidsforholdHistorikk(Arbeidsforhold arbeidsforhold, LocalDate kalendermaaned) {
-        return getArbeidsforholdHistorikk(arbeidsforhold, kalendermaaned, null);
-    }
-
     @SneakyThrows
-    public List<Arbeidsforhold> getArbeidsforholdHistorikk(Arbeidsforhold arbeidsforhold, LocalDate kalendermaaned, Integer count) {
+    public List<Arbeidsforhold> getArbeidsforholdHistorikk(
+            Arbeidsforhold arbeidsforhold,
+            LocalDate kalendermaaned,
+            Integer count,
+            boolean retry
+    ) {
         log.info("Finner arbeidsforhold historikk fra og med {}.", kalendermaaned.plusMonths(1));
         List<ArbeidsforholdResponse> response = getArbeidsforholdHistorikkResponse(arbeidsforhold, kalendermaaned, count);
 
-
         if (response.isEmpty()) {
-            log.info("Fant ikke historikk. Prøver på nytt.");
-            return getArbeidsforholdHistorikk(arbeidsforhold, kalendermaaned, count);
+            if (retry) {
+                log.info("Fant ikke historikk. Prøver på nytt.");
+                return getArbeidsforholdHistorikk(arbeidsforhold, kalendermaaned, count, false);
+            } else {
+                throw new SyntetiseringException(OPPRETTELSE_FEILMELDING + "empty response.");
+            }
         }
 
         log.info("Fant historikk for {} måneder.", response.size());
@@ -80,7 +96,7 @@ public class SyntrestConsumer {
                 arbeidsforhold.getIdent(),
                 arbeidsforhold.getArbeidsforholdId(),
                 arbeidsforhold.getVirksomhetsnummer())
-        ).collect(Collectors.toList());
+        ).toList();
 
         list.stream()
                 .filter(value -> value.getSluttdato() != null)
@@ -92,11 +108,13 @@ public class SyntrestConsumer {
     public Arbeidsforhold getFirstArbeidsforhold(LocalDate startdato, String ident, String virksomhetsnummer) {
         try {
             log.info("Oppretter nytt arbeidsforhold den {}.", startdato);
-            ArbeidsforholdResponse response = new GenerateStartArbeidsforholdCommand(webClient, startdato).call();
+            var accessToken = tokenExchange.exchange(properties).block();
+            ArbeidsforholdResponse response = new GenerateStartArbeidsforholdCommand(webClient, startdato, accessToken.getTokenValue()).call();
             log.trace("Nytt arbeidsforhold av type: {}.", response.getArbeidsforholdType());
             return new Arbeidsforhold(response, ident, virksomhetsnummer);
         } catch (WebClientResponseException.InternalServerError e) {
             throw new SyntetiseringException("Feil med start av arbeidsforhold for dato: " + startdato, e);
         }
     }
+
 }
